// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call remove on close button click 1`] = `
<Alert
  actions={
    Object {
      "dismissAlertMessage": [MockFunction] {
        "calls": Array [
          Array [
            1,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  alerts={
    Array [
      Object {
        "detail": "More words",
        "id": 1,
        "message": "Test message",
        "type": "error",
      },
    ]
  }
>
  <div
    className="alert-container  mko_1wyx37g-container"
  >
    <AlertMessage
      detail="More words"
      expandDetail={[Function]}
      id={1}
      isExpanded={false}
      key="1"
      message="Test message"
      remove={
        [MockFunction] {
          "calls": Array [
            Array [
              1,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="error"
    >
      <div
        className="alert alert--error  mko_1wyx37g-alert  mko_1wyx37g-error"
      >
        <div
          className="alert__content  mko_1wyx37g-alert__content"
        >
          <div
            className="alert__message  mko_1wyx37g-alert__message"
          >
            <div
              className="alert__icon  mko_1wyx37g-alert__icon"
            />
            <div
              className="alert__title  mko_1wyx37g-alert__title"
            >
              Test message
            </div>
            <div
              className="alert__actions  mko_1wyx37g-alert__actions"
            >
              <Button
                className="alert__expand"
                onClick={[Function]}
                type="button"
              >
                <button
                  className="button ripple button--standard  mko_xh0n1r-button  mko_xh0n1r-button_standard alert__expand"
                  onClick={[Function]}
                  type="button"
                >
                  Details
                </button>
              </Button>
              <Button
                aria-label="Close Alert"
                className="alert__close  mko_1wyx37g-close"
                icon="❌︎"
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Close Alert"
                  className="button ripple button--icon  mko_xh0n1r-button  mko_xh0n1r-button_icon alert__close  mko_1wyx37g-close"
                  icon="❌︎"
                  onClick={[Function]}
                  type="button"
                />
              </Button>
            </div>
          </div>
          <div
            className="alert__details  mko_1wyx37g-alert__details"
          >
            More words
          </div>
        </div>
      </div>
    </AlertMessage>
  </div>
</Alert>
`;

exports[`should expand alert on click 1`] = `
<Alert
  actions={
    Object {
      "dismissAlertMessage": [MockFunction],
    }
  }
  alerts={
    Array [
      Object {
        "detail": "More words",
        "id": 1,
        "message": "Test message",
        "type": "error",
      },
    ]
  }
>
  <div
    className="alert-container  mko_1wyx37g-container"
  >
    <AlertMessage
      detail="More words"
      expandDetail={[Function]}
      id={1}
      isExpanded={false}
      key="1"
      message="Test message"
      remove={[MockFunction]}
      type="error"
    >
      <div
        className="alert alert--error  mko_1wyx37g-alert  mko_1wyx37g-error"
      >
        <div
          className="alert__content  mko_1wyx37g-alert__content"
        >
          <div
            className="alert__message  mko_1wyx37g-alert__message"
          >
            <div
              className="alert__icon  mko_1wyx37g-alert__icon"
            />
            <div
              className="alert__title  mko_1wyx37g-alert__title"
            >
              Test message
            </div>
            <div
              className="alert__actions  mko_1wyx37g-alert__actions"
            >
              <Button
                className="alert__expand"
                onClick={[Function]}
                type="button"
              >
                <button
                  className="button ripple button--standard  mko_xh0n1r-button  mko_xh0n1r-button_standard alert__expand"
                  onClick={[Function]}
                  type="button"
                >
                  Details
                </button>
              </Button>
              <Button
                aria-label="Close Alert"
                className="alert__close  mko_1wyx37g-close"
                icon="❌︎"
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Close Alert"
                  className="button ripple button--icon  mko_xh0n1r-button  mko_xh0n1r-button_icon alert__close  mko_1wyx37g-close"
                  icon="❌︎"
                  onClick={[Function]}
                  type="button"
                />
              </Button>
            </div>
          </div>
          <div
            className="alert__details  mko_1wyx37g-alert__details"
          >
            More words
          </div>
        </div>
      </div>
    </AlertMessage>
  </div>
</Alert>
`;

exports[`should expand alert on click 2`] = `
<Alert
  actions={
    Object {
      "dismissAlertMessage": [MockFunction],
    }
  }
  alerts={
    Array [
      Object {
        "detail": "More words",
        "id": 1,
        "message": "Test message",
        "type": "error",
      },
    ]
  }
>
  <div
    className="alert-container  mko_1wyx37g-container"
  >
    <AlertMessage
      detail="More words"
      expandDetail={[Function]}
      id={1}
      isExpanded={true}
      key="1"
      message="Test message"
      remove={[MockFunction]}
      type="error"
    >
      <div
        className="alert alert--error  mko_1wyx37g-alert  mko_1wyx37g-error"
      >
        <div
          className="alert__content alert__content--is-expanded  mko_1wyx37g-alert__content  mko_1wyx37g-alert__content_expanded"
        >
          <div
            className="alert__message  mko_1wyx37g-alert__message"
          >
            <div
              className="alert__icon  mko_1wyx37g-alert__icon"
            />
            <div
              className="alert__title  mko_1wyx37g-alert__title"
            >
              Test message
            </div>
            <div
              className="alert__actions  mko_1wyx37g-alert__actions"
            >
              <Button
                aria-label="Close Alert"
                className="alert__close  mko_1wyx37g-close"
                icon="❌︎"
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Close Alert"
                  className="button ripple button--icon  mko_xh0n1r-button  mko_xh0n1r-button_icon alert__close  mko_1wyx37g-close"
                  icon="❌︎"
                  onClick={[Function]}
                  type="button"
                />
              </Button>
            </div>
          </div>
          <div
            className="alert__details  mko_1wyx37g-alert__details"
          >
            More words
          </div>
        </div>
      </div>
    </AlertMessage>
  </div>
</Alert>
`;

exports[`should render container when has alerts 1`] = `
<div
  className="alert-container  mko_1wyx37g-container"
>
  <AlertMessage
    detail="More words"
    expandDetail={[Function]}
    id={1}
    isExpanded={false}
    key="1"
    message="Test message"
    remove={[MockFunction]}
    type="error"
  />
</div>
`;
